--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>quilty</title>
+    <title>quilt</title>
     <meta charset="utf-8" />
   </head>
   <body>
